plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.5'
    id 'io.spring.dependency-management' version '1.1.3'
}

// 禁用 bootJar 任务，因为这是一个多模块项目的根项目
bootJar {
    enabled = false
}

// 启用 jar 任务，生成普通的 JAR 文件
jar {
    enabled = true
}

group = 'com.suven.framework'
version = '0.0.1-SNAPSHOT'
def mavenUrl = "http://192.168.3.100:9091/nexus/"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

//configurations {
//    compileOnly {
//        extendsFrom annotationProcessor
//    }
//}

// 确保所有项目（包括根项目和子项目）都使用相同的仓库配置
allprojects {
    repositories {
        maven { url "${mavenUrl}/repository/maven-public/"
            allowInsecureProtocol = true // 显式允许不安全协议
        }
        mavenCentral()
    }
}

ext {
    set('springCloudVersion', "2025.0.0")
    set('springModulithVersion', "1.4.1")
}

dependencies {
//    implementation 'org.springframework.boot:spring-boot-starter-web'
//    implementation 'org.springframework.boot:spring-boot-starter-web-services'
//    implementation 'org.springframework.cloud:spring-cloud-starter'
//    implementation 'org.springframework.cloud:spring-cloud-starter-gateway-server-webmvc'
//    implementation 'org.springframework.modulith:spring-modulith-starter-core'
//    compileOnly 'org.projectlombok:lombok'
//    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
//    runtimeOnly 'com.mysql:mysql-connector-j'
//    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
//    annotationProcessor 'org.projectlombok:lombok'
//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
//    testImplementation 'org.springframework.modulith:spring-modulith-starter-test'
//    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

//dependencyManagement {
//    imports {
//        mavenBom "org.springframework.modulith:spring-modulith-bom:${springModulithVersion}"
//        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
//    }
//}
//
//tasks.named('test') {
//    useJUnitPlatform()
//}
